--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
 
     --font-heading: 'Ubuntu', sans-serif;
     --font-body: 'Inter', sans-serif;
+    --font-logo: 'Lora', serif;
 
     --header-height: 72px;
 }
